# fishregresstion

./: Dockerfile  README.md  pyproject.toml
note/: gresstion2.ipynb  gresstion_CLI.ipynb  gresstion_s.ipynb  regression.ipynb
src/fishregresstion/: cli.py  lr_model.pkl  main.py
src/fishregresstion/model/: manager.py
