[project]
name = "fishregresstion"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "hun0219", email = "gsw98000@gmail.com"},
]
dependencies = [
    "scikit-learn>=1.5.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
