[project]
name = "fishregresstion"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "hun0219", email = "gsw98000@gmail.com"},
]
dependencies = [
    "scikit-learn>=1.5.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
note = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "notebook>=7.2.2",
    "matplotlib>=3.9.2",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
]
